--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<meta http-equiv="refresh" content="0;URL='http://demo.catchpoint/com'" />
+	<title>iweather demo</title>
 </head>
 <body>
-<img src="http://demo.catchpoint/com">
+<img src="">
 </body>
 </html>
