--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="refresh" content="0;URL='http://demo.catchpoint/com'" />
 	<title>iweather demo</title>
 </head>
+	<img src="http://demo.catchpoint/com" alt="failed request">
 <body>
 </body>
 </html>
