--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>iweather demo</title>
 </head>
-	<img src="http://demo.catchpoint/com" alt="failed request">
+	<img src="http://demo.catchpoint.com" alt="failed request">
 <body>
 </body>
 </html>
